# melee-tournament

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  IMPROVE_BOT_ISOLATION.md  LLM_BOT_IMPLEMENTATION.md  README.md  VPN-MIGRATION.md  cli.py  main.py  pyproject.toml  requirements.txt  start-ome.sh  stream-vpn.sh  stream_forwarder.py  twitch-push.sh
.claude/commands/: libmelee-css-debug.md  libmelee-game-loop.md  libmelee.md
.opencode/agents/: bot-writer.md
.opencode/skills/frontend/: SKILL.md
.opencode/skills/libmelee-bot-interface/: SKILL.md
.opencode/skills/melee-strategy/: SKILL.md
config/: deploy-nginx.sh  frpc.toml  frps.toml  nginx-frontend.conf  nginx-stream.conf  ome-Server.xml  settings.example.toml  settings.toml
core/: bot_generator.py  bot_loader.py  bot_process.py  bot_template.py  bot_validator.py  bot_worker.py  cleanup.py  config.py  frame.py  game_state.py  llm_client.py  melee_orchestrator.py  roster.py  teams.py  test_bot.py
core/bots/: falco.py  falcon.py  fox.py  generic.py  marth.py
docs/: DEPLOYMENT.md  setup.md
frontend/: app.py
frontend/static/: dashboard.js
frontend/templates/: admin.html  index.html  lobby.html  team.html  watch.html
