[project]
name = "smash-tournament"
version = "0.1.0"
description = "Self-hosted Super Smash Bros. Melee bot platform - submit Python bots or LLM prompts, stream live to Twitch via Slippi Dolphin."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Felix Scherz" }]

dependencies = [
    "melee>=0.47.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "toml>=0.10.2",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[project.scripts]
smash-tournament = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Installed EDITABLE into ./.venv so the `smash-tournament` entry point exists.
# Editable keeps __file__ inside the repo, so the REPO_ROOT-relative paths,
# the bot subprocess sandbox (sys.executable), OBS, and stream-vpn.sh all keep
# working unchanged. `uv run main.py` also still works.
package = true

[tool.hatch.build.targets.wheel]
packages = ["core", "frontend"]

# Top-level modules (flat layout) that must ship alongside the packages.
[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"cli.py" = "cli.py"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
